# AgentOS

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
agents/: base.py  lifecycle.py
agents/coding/: README.md  agent.py  config.py  memory.py  prompts.py  tools.py
agents/finance/: README.md  agent.py  config.py  memory.py  prompts.py  tools.py
agents/github/: README.md  agent.py  config.py  memory.py  prompts.py  tools.py
agents/research/: README.md  agent.py  config.py  memory.py  prompts.py  prompts_v1.py  tools.py
apps/api/: main.py
apps/cli/: main.py
apps/dashboard/: app.py
core/: __init__.py
core/communication/: contracts.py  dispatcher.py  events.py  messages.py
core/config/: settings.py
docker/: Dockerfile  docker-compose.yml
docs/: architecture.md  communication.md  contributing.md  memory.md  roadmap.md  security.md  supervisor.md
evaluation/: benchmarks.py  judge.py  metrics.py
observability/: metrics.py  performance.py  tracing.py
registry/: __init__.py  agent_registry.py  capability_registry.py  tool_registry.py
supervisor/: __init__.py  memory_bridge.py  orchestrator.py  planner.py  report_generator.py  router.py  scheduler.py  validator.py
task_queue/: __init__.py  queue.py  state.py  worker.py
tests/: test_api.py  test_config.py  test_llm_provider.py  test_models.py  test_planner.py  test_react_reasoner.py  test_registries.py  test_registry.py  test_research_agent.py  test_supervisor_orchestrator.py  test_tools.py
workflow/: __init__.py  states.py  transitions.py
(+39 files in other folders)
