[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "agentos"
version = "0.1.0"
description = "Production-grade Modular Agentic AI Operating System"
authors = ["AgentOS Architecture Team <architecture@agentos.ai>"]
readme = "README.md"
packages = [
    { include = "core" },
    { include = "supervisor" },
    { include = "registry" },
    { include = "agents" },
    { include = "workflow" },
    { include = "task_queue" },
    { include = "knowledge" },
    { include = "observability" },
    { include = "evaluation" },
    { include = "apps" }
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.28.0"}
pydantic = "^2.6.0"
pydantic-settings = "^2.2.0"
structlog = "^24.1.0"
typer = "^0.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.0"
pytest-asyncio = "^0.23.0"
ruff = "^0.3.0"
black = "^24.2.0"
mypy = "^1.8.0"
pre-commit = "^3.6.0"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = []

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
asyncio_mode = "auto"
